--- a/index.html
+++ b/index.html
@@ -1,295 +1,125 @@
-Transfer From  
-Jul 6, 2025  
-+$6,685.00 ✅ Confirmed  
-
-Transfer From  
-Jul 7, 2025  
--$1,354.00 🟡 Pending  
-
-Transfer From  
-Jul 10, 2025  
-+$2,849.27 ✅ Confirmed  
-
-Transfer From  
-Jul 10, 2025  
--$1,731.44 🟡 Pending  
-
-Transfer From  
-Jul 10, 2025  
-+$3,905.67 ❌ Failed  
-
-Transfer From  
-Jul 10, 2025  
-+$1,452.60 ✅ Confirmed  
-
-Transfer From  
-Jul 10, 2025  
--$2,218.45 ✅ Confirmed  
-
-Transfer From  
-Jul 9, 2025  
-+$3,100.00 🟡 Pending  
-
-Transfer From  
-Jul 9, 2025  
--$3,477.32 ✅ Confirmed  
-
-Transfer From  
-Jul 9, 2025  
-+$2,982.11 ✅ Confirmed  
-
-Transfer From  
-Jul 9, 2025  
--$1,908.34 ❌ Failed  
-
-Transfer From  
-Jul 9, 2025  
-+$1,500.00 🟡 Pending  
-
-Transfer From  
-Jul 9, 2025  
--$3,210.55 ✅ Confirmed  
-
-Transfer From  
-Jul 9, 2025  
-+$3,865.20 🟡 Pending  
-
-Transfer From  
-Jul 8, 2025  
--$1,985.00 ✅ Confirmed  
-
-Transfer From  
-Jul 8, 2025  
-+$2,430.75 ✅ Confirmed  
-
-Transfer From  
-Jul 8, 2025  
--$3,289.10 ❌ Failed  
-
-Transfer From  
-Jul 8, 2025  
-+$3,754.60 ✅ Confirmed  
-
-Transfer From  
-Jul 8, 2025  
--$2,123.33 🟡 Pending  
-
-Transfer From  
-Jul 8, 2025  
-+$1,957.20 ✅ Confirmed  
-
-Transfer From  
-Jul 8, 2025  
--$3,622.88 ✅ Confirmed  
-
-Transfer From  
-Jul 8, 2025  
-+$3,021.77 🟡 Pending  
-
-Transfer From  
-Jul 7, 2025  
--$2,399.90 ❌ Failed  
-
-Transfer From  
-Jul 7, 2025  
-+$1,748.25 ✅ Confirmed  
-
-Transfer From  
-Jul 7, 2025  
--$2,876.44 ✅ Confirmed  
-
-Transfer From  
-Jul 7, 2025  
-+$3,222.10 🟡 Pending  
-
-Transfer From  
-Jul 7, 2025  
--$1,690.67 ✅ Confirmed  
-
-Transfer From  
-Jul 7, 2025  
-+$2,998.40 🟡 Pending  
-
-Transfer From  
-Jul 7, 2025  
--$2,050.00 ✅ Confirmed  
-
-Transfer From  
-Jul 6, 2025  
-+$1,305.99 ❌ Failed  
-
-Transfer From  
-Jul 6, 2025  
--$3,185.00 🟡 Pending  
-
-Transfer From  
-Jul 6, 2025  
-+$1,980.45 ✅ Confirmed  
-
-Transfer From  
-Jul 6, 2025  
--$2,775.00 ✅ Confirmed  
-
-Transfer From  
-Jul 6, 2025  
-+$3,198.76 🟡 Pending  
-
-Transfer From  
-Jul 6, 2025  
--$1,699.60 ✅ Confirmed  
-
-Transfer From  
-Jul 6, 2025  
-+$2,543.80 ✅ Confirmed  
-
-Transfer From  
-Jul 6, 2025  
--$3,105.00 🟡 Pending  
-
-Transfer From  
-Jul 5, 2025  
-+$3,365.23 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
--$1,981.00 ❌ Failed  
-
-Transfer From  
-Jul 5, 2025  
-+$3,449.76 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
--$2,625.10 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
-+$1,941.33 🟡 Pending  
-
-Transfer From  
-Jul 5, 2025  
--$1,789.20 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
-+$3,000.00 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
--$2,890.10 ❌ Failed  
-
-Transfer From  
-Jul 5, 2025  
-+$2,135.25 ✅ Confirmed  
-
-Transfer From  
-Jul 5, 2025  
--$1,950.00 🟡 Pending  
-
-Transfer From  
-Jul 5, 2025  
-+$2,767.88 ✅ Confirmed  
-
-Transfer From  
-Jul 4, 2025  
--$2,805.00 ✅ Confirmed  
-
-Transfer From  
-Jul 4, 2025  
-+$3,099.77 ✅ Confirmed  
-
-Transfer From  
-Jul 4, 2025  
--$1,399.99 ❌ Failed  
-
-Transfer From  
-Jul 4, 2025  
-+$2,990.25 ✅ Confirmed  
-
-Transfer From  
-Jul 4, 2025  
--$2,010.00 ✅ Confirmed 
-
-Transfer From  
-Jul 4, 2025  
-+$3,720.50 ✅ Confirmed  
-
-Transfer From  
-Jul 4, 2025  
--$3,121.00 ✅ Confirmed  
-
-Transfer From  
-Jul 3, 2025  
-+$1,689.25 ✅ Confirmed  
-
-Transfer From  
-Jul 3, 2025  
--$3,440.67 ✅ Confirmed    
-
-Transfer From  
-Jul 3, 2025  
-+$3,348.55 ❌ Failed  
-
-Transfer From  
-Jul 3, 2025  
--$2,990.00 ✅ Confirmed  
-
-Transfer From  
-Jul 3, 2025  
-+$2,764.70 ✅ Confirmed    
-
-Transfer From  
-Jul 3, 2025  
--$1,899.33 ✅ Confirmed  
-
-Transfer From  
-Jul 2, 2025  
-+$1,765.12 ✅ Confirmed  
-
-Transfer From  
-Jul 2, 2025  
--$2,876.33 ✅ Confirmed  
-
-Transfer From  
-Jul 2, 2025  
-+$3,498.88 ✅ Confirmed    
-
-Transfer From  
-Jul 2, 2025  
--$1,342.30 ✅ Confirmed  
-
-Transfer From  
-Jul 2, 2025  
-+$2,124.90 ✅ Confirmed  
-
-Transfer From  
-Jul 2, 2025  
--$3,321.55 ✅ Confirmed    
-
-Transfer From  
-Jul 2, 2025  
-+$3,105.00 ✅ Confirmed  
-
-Transfer From  
-Jul 1, 2025  
--$2,970.00 ✅ Confirmed  
-
-Transfer From  
-Jul 1, 2025  
-+$1,434.00 🟡 Pending  
-
-Transfer From  
-Jul 1, 2025  
--$3,100.33 ✅ Confirmed  
-
-Transfer From  
-Jul 1, 2025  
-+$2,641.22 ✅ Confirmed  
-
-Transfer From  
-Jul 1, 2025  
--$1,755.20 ✅ Confirmed  
-
-Transfer From  
-Jul 1, 2025  
-+$2,320.00 ✅ Confirmed  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wallet App</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #000;
+      color: #fff;
+    }
+    header {
+      background-color: #111;
+      padding: 1.2rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      border-bottom: 1px solid #333;
+    }
+    .balance-section {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    .balance-section h2 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+    .buttons button {
+      padding: 0.75rem 1.5rem;
+      background-color: #222;
+      border: 1px solid #444;
+      color: #fff;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+    .wallet-info {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #bbb;
+      margin-bottom: 2rem;
+    }
+    .transaction-history {
+      padding: 1rem 1.5rem;
+    }
+    .transaction {
+      background-color: #111;
+      border: 1px solid #222;
+      border-radius: 8px;
+      padding: 1rem;
+      margin-bottom: 10px;
+    }
+    .transaction span {
+      display: block;
+    }
+    .amount {
+      font-weight: bold;
+      color: #0f0;
+    }
+  </style>
+</head>
+<body>
+  <header>Wallet App</header>
+
+  <div class="balance-section">
+    <h2>$6,685.68</h2>
+    <div class="buttons">
+      <button>Send</button>
+      <button>Receive</button>
+      <button>Scan</button>
+    </div>
+    <div class="wallet-info">
+      Wallet Address: 0xfAbC09ba76d0004339179aa6bDFF7d0d3C9820Ff<br>
+      Network: Crypto One Chain<br>
+      Token: POL
+    </div>
+  </div>
+
+  <div class="transaction-history">
+    <h3>Transaction History</h3>
+
+    <!-- Fixed real entry -->
+    <div class="transaction">
+      <span>Transfer From</span>
+      <span>Jul 6, 2025</span>
+      <span class="amount">+$6,685.00 ✅ Confirmed</span>
+    </div>
+    <div class="transaction">
+      <span>Transfer From</span>
+      <span>Jul 7, 2025</span>
+      <span class="amount">-$1,354.00 ✅ Confirmed</span>
+    </div>
+
+    <!-- Auto-generated sample confirmed entries -->
+    <!-- You can repeat or edit these blocks as needed -->
+    <!-- Begin Generated -->
+    <script>
+      const container = document.querySelector('.transaction-history');
+      const dates = ["Jul 10, 2025", "Jul 9, 2025", "Jul 8, 2025", "Jul 7, 2025", "Jul 6, 2025", "Jul 5, 2025", "Jul 4, 2025", "Jul 3, 2025", "Jul 2, 2025", "Jul 1, 2025"];
+      for (let i = 0; i < 100; i++) {
+        const div = document.createElement("div");
+        div.className = "transaction";
+        const date = dates[i % dates.length];
+        const amount = (Math.random() * 3000 + 1000).toFixed(2);
+        const type = Math.random() > 0.5 ? '+' : '-';
+        div.innerHTML = `
+          <span>Transfer From</span>
+          <span>${date}</span>
+          <span class="amount">${type}$${amount} ✅ Confirmed</span>
+        `;
+        container.appendChild(div);
+      }
+    </script>
+    <!-- End Generated -->
+
+  </div>
+</body>
+</html>
