--- a/index.html
+++ b/index.html
@@ -1,169 +1,183 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wallet App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #000;
-      color: #eee;
+      background-color: #0d1117;
+      color: #c9d1d9;
+      transition: background-color 0.3s, color 0.3s;
     }
-
     header {
-      background-color: #111;
+      background-color: #161b22;
       padding: 1rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #0f0;
-    }
-
-    .balance {
       text-align: center;
-      margin: 2rem 0;
     }
-
-    .balance h2 {
+    header h1 {
       margin: 0;
-      font-size: 2.5rem;
-      color: #0f0;
-      animation: glow 1.5s ease-in-out infinite alternate;
     }
-
-    @keyframes glow {
-      from { text-shadow: 0 0 5px #0f0; }
-      to { text-shadow: 0 0 20px #0f0; }
-    }
-
-    .wallet-info {
-      text-align: center;
-      margin-bottom: 1rem;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-
-    .buttons {
+    .tabs {
       display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin: 1.5rem 0;
+      justify-content: space-around;
+      background: #161b22;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      border-top: 1px solid #30363d;
     }
-
-    .buttons button {
-      background-color: #0f0;
-      color: #000;
+    .tabs button {
+      flex: 1;
+      padding: 1rem;
+      background: none;
       border: none;
-      padding: 0.8rem 1.2rem;
+      color: #8b949e;
       font-weight: bold;
-      cursor: pointer;
+    }
+    .tabs button.active {
+      color: #58a6ff;
+    }
+    .section {
+      padding: 2rem;
+      display: none;
+    }
+    .section.active {
+      display: block;
+    }
+    .transaction {
+      margin-bottom: 1rem;
+      border-bottom: 1px solid #30363d;
+      padding-bottom: 1rem;
+    }
+    .btn-lock {
+      background-color: #238636;
+      padding: 0.75rem 1rem;
+      border: none;
+      color: white;
+      font-weight: bold;
+      margin-top: 1rem;
       border-radius: 5px;
     }
-
-    .transactions {
-      max-width: 500px;
-      margin: auto;
-      padding: 1rem;
-      background-color: #111;
-      border-radius: 8px;
-    }
-
-    .transactions h3 {
-      margin-bottom: 1rem;
-      color: #0f0;
-    }
-
-    .txn {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #222;
-    }
-
-    .txn:last-child {
-      border-bottom: none;
-    }
-
-    .popup {
-      position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #111;
-      border: 2px solid #0f0;
-      color: #0f0;
-      padding: 1.5rem;
-      border-radius: 8px;
-      display: none;
-      z-index: 999;
-      text-align: center;
-    }
-
-    .popup button {
-      margin-top: 1rem;
+    .toggle-mode {
+      background-color: #30363d;
+      color: #c9d1d9;
       padding: 0.5rem 1rem;
-      background: #0f0;
+      border-radius: 5px;
       border: none;
-      font-weight: bold;
-      cursor: pointer;
-      color: #000;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-
   <header>
-    Wallet App
-  </header>
+    <h1>Wallet App</h1>
+  </header>  <div id="home" class="section active">
+    <h2>Balance: $6,685.68</h2>
+    <button class="btn-lock" onclick="alert('Pay $7 to unlock this feature')">Send</button>
+    <button class="btn-lock" onclick="alert('Pay $7 to unlock this feature')">Receive</button>
+    <button class="btn-lock" onclick="alert('Pay $7 to unlock this feature')">Scan</button>
+    <p style="margin-top: 1rem;">Wallet: <code>0xfAbC09ba76d0004339179aa6bDFF7d0d3C9820Ff</code></p>
+    <p>Network: Crypto One Chain</p>
+    <p>Token: POL</p>
+  </div>  <div id="transactions" class="section">
+    <h2>Transaction History</h2>
+    <div class="transaction">Transfer From<br>Jul 6, 2025<br><strong>+$6,685.00</strong> ✅ Confirmed</div>
+    <div class="transaction">Transfer From<br>Jul 7, 2025<br><strong>-$1,354.00</strong> ✅ Confirmed</div>
+    <!-- Add more fake confirmed transactions -->
+    <!-- Repeat or generate as needed -->
+  </div>  <div id="stats" class="section">
+    <h2>Token Breakdown</h2>
+    <canvas id="pieChart" width="300" height="300"></canvas>
+    <h2 style="margin-top: 2rem;">Balance Over Time</h2>
+    <canvas id="lineChart" width="300" height="200"></canvas>
+  </div>  <div id="settings" class="section">
+    <h2>Settings</h2>
+    <button class="toggle-mode" onclick="toggleTheme()">Toggle Light/Dark Mode</button>
+    <h3 style="margin-top: 2rem;">Support</h3>
+    <a class="btn-lock" href="https://t.me/jhayone_tech5" target="_blank">@jhayone_tech5</a>
+  </div>  <div class="tabs">
+    <button onclick="showTab('home')" class="active">🏠</button>
+    <button onclick="showTab('transactions')">📄</button>
+    <button onclick="showTab('stats')">📊</button>
+    <button onclick="showTab('settings')">⚙️</button>
+  </div>  <script>
+    const tabs = document.querySelectorAll('.tabs button');
+    const sections = document.querySelectorAll('.section');
 
-  <div class="balance">
-    <p>Current Balance</p>
-    <h2>$6,685.68</h2>
-  </div>
-
-  <div class="wallet-info">
-    Wallet: 0xfAbC09ba76d0004339179aa6bDFF7d0d3C9820Ff
-  </div>
-
-  <div class="buttons">
-    <button onclick="showPopup()">Send</button>
-    <button onclick="showPopup()">Receive</button>
-    <button onclick="showPopup()">Scan</button>
-  </div>
-
-  <div class="transactions">
-    <h3>Transaction History</h3>
-
-    <!-- Example of repeated transactions -->
-    <div class="txn">Transfer From<br>Jul 6, 2025<br>+$6,685.00 ✅ Confirmed</div>
-    <div class="txn">Transfer From<br>Jul 7, 2025<br>-$1,354.00 ✅ Confirmed</div>
-
-    <!-- You can repeat this block manually or script it if needed -->
-    <div class="txn">Transfer From<br>Jul 8, 2025<br>+$2,849.27 ✅ Confirmed</div>
-    <div class="txn">Transfer From<br>Jul 9, 2025<br>-$1,731.44 ✅ Confirmed</div>
-    <div class="txn">Transfer From<br>Jul 10, 2025<br>+$1,452.60 ✅ Confirmed</div>
-    <div class="txn">Transfer From<br>Jul 10, 2025<br>-$2,218.45 ✅ Confirmed</div>
-    <div class="txn">Transfer From<br>Jul 10, 2025<br>+$3,865.77 ✅ Confirmed</div>
-    <!-- Add more as needed -->
-
-  </div>
-
-  <div class="popup" id="popup">
-    <p>⚠️ Pay $7 to unlock this feature</p>
-    <button onclick="hidePopup()">Close</button>
-  </div>
-
-  <script>
-    function showPopup() {
-      document.getElementById("popup").style.display = "block";
+    function showTab(id) {
+      sections.forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+      tabs.forEach(t => t.classList.remove('active'));
+      tabs.forEach(t => {
+        if (t.getAttribute('onclick').includes(id)) t.classList.add('active');
+      });
     }
 
-    function hidePopup() {
-      document.getElementById("popup").style.display = "none";
+    function toggleTheme() {
+      const body = document.body;
+      const isDark = body.style.backgroundColor === 'rgb(13, 17, 23)';
+      if (isDark) {
+        body.style.backgroundColor = '#ffffff';
+        body.style.color = '#000000';
+      } else {
+        body.style.backgroundColor = '#0d1117';
+        body.style.color = '#c9d1d9';
+      }
     }
-  </script>
 
-</body>
+    // Charts
+    new Chart(document.getElementById('pieChart'), {
+      type: 'pie',
+      data: {
+        labels: ['POL', 'ETH'],
+        datasets: [{
+          data: [70, 30],
+          backgroundColor: ['#238636', '#58a6ff']
+        }]
+      },
+      options: {
+        plugins: {
+          legend: {
+            labels: {
+              color: '#c9d1d9'
+            }
+          }
+        }
+      }
+    });
+
+    new Chart(document.getElementById('lineChart'), {
+      type: 'line',
+      data: {
+        labels: ['Jul 1', 'Jul 2', 'Jul 3', 'Jul 4', 'Jul 5', 'Jul 6'],
+        datasets: [{
+          label: 'Balance ($)',
+          data: [2000, 3000, 2500, 4000, 5000, 6685.68],
+          borderColor: '#58a6ff',
+          fill: false
+        }]
+      },
+      options: {
+        scales: {
+          x: {
+            ticks: { color: '#c9d1d9' }
+          },
+          y: {
+            ticks: { color: '#c9d1d9' }
+          }
+        },
+        plugins: {
+          legend: {
+            labels: {
+              color: '#c9d1d9'
+            }
+          }
+        }
+      }
+    });
+  </script></body>
 </html>
